syntax = "proto3";

package project;

import "api/project/message.proto";
import "api/common/error_reason.proto";
import "google/protobuf/empty.proto";

option go_package = "api/project;";

service ProjectInterface {
      rpc CreateNamespace(project.CreateNamespaceReq) returns (common.Msg);
      rpc GetNamespaces(google.protobuf.Empty) returns (project.Namesapces);
}